--- a/userfiles/css/styles.css
+++ b/userfiles/css/styles.css
@@ -3,12 +3,11 @@
 /* Global */
 body {
 	font-family: "Titillium Web", sans-serif;
-	overflow-x: hidden;
 	background-image: url("../imgs/bg-top.jpg");
 	background-size: cover;
 	background-repeat: no-repeat; 
 }
-section .row { overflow-x: hidden; }
+section { overflow-x: hidden; }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 { font-family: "Titillium Web", sans-serif; text-transform: uppercase; }
 .h1 span, .h2 span, .h3 span, .h4 span, .h5 span, .h6 span, h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
