--- a/userfiles/css/styles.css
+++ b/userfiles/css/styles.css
@@ -348,6 +348,7 @@ footer .footer_section_main figure img { height: 50px; }
 	.homepage .section_row_1 .col-md-6:first-child h2,
 	.homepage .section_row_2 h2,
 	.homepage .section_row_3 h2 { font-size: 2rem; }
+	.banner:before, .banner-after { top: 85%; }
 }
 
 
