--- a/userfiles/css/styles.css
+++ b/userfiles/css/styles.css
@@ -349,6 +349,7 @@ footer .footer_section_main figure img { height: 50px; }
 	.homepage .section_row_2 h2,
 	.homepage .section_row_3 h2 { font-size: 2rem; }
 	.banner:before, .banner:after { top: 85%; }
+	.followup .section_row_main h2, .followup .section_row_1 h2 { font-size: 2.5rem; }
 }
 
 
